# xfina

./: .gitignore  AGENTS.md  Cargo.toml  README.md  debug_bob.py  patch_tests.py  replace_ui.py
.github/workflows/: deploy.yml
bank-accounts/axis/: Cargo.toml
bank-accounts/axis/src/: lib.rs  parser.rs
bank-accounts/axis/tests/: integration.rs
bank-accounts/bob/: Cargo.toml
bank-accounts/bob/src/: lib.rs  parser.rs
bank-accounts/bob/tests/: integration.rs
bank-accounts/hdfc/: Cargo.toml
bank-accounts/hdfc/src/: lib.rs  parser.rs
bank-accounts/hdfc/tests/: integration.rs
bank-accounts/icici/: Cargo.toml  test_icici.rs
bank-accounts/icici/src/: lib.rs  parser.rs
bank-accounts/icici/tests/: integration.rs
bank-accounts/sbi/: Cargo.toml
bank-accounts/sbi/dummy_crypt/: Cargo.toml
bank-accounts/sbi/src/: layout.rs  lib.rs  parser.rs
bank-accounts/sbi/tests/: integration.rs
cams/: Cargo.toml
cams/src/: cas.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
credit-card/hdfc/: Cargo.toml
credit-card/hdfc/src/: parser.rs
credit-card/icici/: Cargo.toml
credit-card/icici/src/: main.rs  parser.rs
credit-cards/hdfc/: Cargo.toml
credit-cards/hdfc/src/: lib.rs  parser.rs
credit-cards/hdfc/tests/: integration.rs
credit-cards/icici/: Cargo.toml
credit-cards/icici/src/: lib.rs  main.rs  parser.rs
credit-cards/icici/tests/: integration.rs
docs/: CNAME  index.html
docs/assets/: financial_extract_wasm_bg-CwqVx6UV.wasm  financial_extract_wasm_bg-DwXmy-ri.wasm  financial_extract_wasm_bg-DxqBhPAl.wasm  index-BS6jJjub.js  index-BZEOIB0d.js  index-BqxMncXX.js  index-CV8Xmxok.css  index-Ce-YK8Us.js  index-Cu2rXwSK.js  index-DMeKBjkj.css  index-DOXYAJSz.css  index-DaccH4eh.js  index-DrRXjmC_.js  index-VtDEg36j.css
ibkr/src/: lib.rs
intl-stocks/ibkr/: Cargo.toml
intl-stocks/ibkr/src/: lib.rs
models/: Cargo.toml  aa_schema_analysis.md
models/src/: bank_account.rs  credit_card.rs  date_utils.rs  deposit.rs  equity.rs  lib.rs  mutual_funds.rs  serializer.rs
mutual-funds/cams/: Cargo.toml
mutual-funds/cams/src/: cas.rs  layout.rs  lib.rs  parser.rs
mutual-funds/cams/tests/: integration.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: .gitignore  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/public/: CNAME
web/src/: App.vue
web/src/components/: EquityStatementUI.txt  StatementHeader.vue
web/src/components/ui/select/: SelectContent.vue
