[workspace]
resolver = "2"
members = [
    "models",
    "cams",
    "ibkr",
    "wasm"
, "credit-card/hdfc", "credit-card/icici"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
financial-extract-models = { path = "models" }
serde = "1.0"
pdf-extract = "0.7"
csv = "1.3"
wasm-bindgen = "0.2"
serde_json = "1.0"
regex = "1.10"
