[workspace]
resolver = "2"
members = [
    "models",
    "mutual-funds/cams",
    "intl-stocks/ibkr",
    "wasm",
    "credit-cards/hdfc", "credit-cards/icici"
, "bank-accounts/hdfc", "bank-accounts/icici", "bank-accounts/sbi", "bank-accounts/bob"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
finx-models = { path = "models" }
serde = "1.0"
pdf-extract = "0.7"
csv = "1.3"
wasm-bindgen = "0.2"
serde_json = "1.0"
regex = "1.10"
