[package]
name = "xfina-models"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { version = "1.42.1", features = ["serde", "serde-with-float", "serde-with-str"] }
serde_with = "3.21.0"
serde_json.workspace = true
