[package]
name = "xfina-cc-icici"
version.workspace = true
edition.workspace = true

[dependencies]
xfina-models.workspace = true
calamine = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
chrono.workspace = true
rust_decimal = "1.42.1"
num-traits = "0.2"

[dev-dependencies]
serde_json.workspace = true
